--- a/index.html
+++ b/index.html
@@ -16,11 +16,28 @@
                 font-variant-numeric: tabular-nums;
             }
 
-            /* Smooth transitions */
             * {
                 transition: background-color 0.2s ease, border-color 0.2s ease;
             }
         </style>
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="/favicon_io/apple-touch-icon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="/favicon_io/favicon-32x32.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="/favicon_io/favicon-16x16.png"
+        />
+        <link rel="manifest" href="/favicon_io/site.webmanifest" />
     </head>
     <body
         class="bg-gray-50 dark:bg-gray-950 text-gray-900 dark:text-gray-100 min-h-screen"
