--- a/index.html
+++ b/index.html
@@ -241,11 +241,13 @@
                 <!-- Search Bar -->
                 <div class="mb-4 flex items-center gap-3">
                     <div class="relative flex-1">
-                        <input id="searchInput" type="text" inputmode="search"
-                        placeholder="ค้นหาวิชา หรือชื่อครู" class="w-full rounded-xl
-                        border border-gray-300 dark:border-gray-700 bg-white
-                        dark:bg-gray-900 px-4 py-2.5 outline-none focus:ring-2
-                        focus:ring-blue-500" />
+                        <input
+                            id="searchInput"
+                            type="text"
+                            inputmode="search"
+                            placeholder="ค้นหาวิชา หรือชื่อครู"
+                            class="w-full rounded-xl border border-gray-300 dark:border-gray-700 bg-white dark:bg-gray-900 px-4 py-2.5 outline-none focus:ring-2 focus:ring-blue-500"
+                        />
                         <kbd
                             class="hidden md:block absolute right-3 top-2.5 text-xs px-1.5 py-0.5 rounded border border-gray-300 dark:border-gray-700 text-gray-500 dark:text-gray-400"
                             >/</kbd
@@ -521,7 +523,6 @@
                         ? "bg-blue-50 dark:bg-blue-950 border-blue-200 dark:border-blue-800"
                         : "bg-white dark:bg-gray-900 border-gray-200 dark:border-gray-800";
 
-                    // ถ้าไม่ตรงคำค้น ให้จางลงเล็กน้อย (ยังแสดงอยู่)
                     const fadeClass =
                         !matched && searchTerm ? "opacity-50" : "";
 
@@ -534,19 +535,27 @@
 
                     const roomText =
                         p.room && !isBreak ? ` • ห้อง ${p.room}` : "";
-                    // ห้องไม่ต้องไฮไลต์ (ตามโจทย์ค้นหาวิชา/ครู)
                     const roomHTML = escapeHTML(roomText);
 
                     wrap.insertAdjacentHTML(
                         "beforeend",
-                        `
+                        isBreak
+                            ? `
+      <div class="p-4 rounded-xl border ${bgClass} ${fadeClass} flex items-center justify-center text-center">
+        <div>
+          <div class="font-medium text-gray-900 dark:text-white">
+            ${subjectHTML}
+          </div>
+          <div class="mono text-sm text-gray-600 dark:text-gray-400 mt-1">
+            ${fmtHM(p.startDate)} - ${fmtHM(p.endDate)}
+          </div>
+        </div>
+      </div>
+    `
+                            : `
       <div class="p-4 rounded-xl border ${bgClass} ${fadeClass} flex items-center justify-between">
         <div class="flex-1">
-          <div class="font-medium ${
-              isBreak
-                  ? "text-gray-500 dark:text-gray-500"
-                  : "text-gray-900 dark:text-white"
-          }">
+          <div class="font-medium text-gray-900 dark:text-white">
             ${subjectHTML}
           </div>
           <div class="text-sm text-gray-500 dark:text-gray-400 mt-1">
@@ -557,7 +566,7 @@
           ${fmtHM(p.startDate)} - ${fmtHM(p.endDate)}
         </div>
       </div>
-      `
+    `
                     );
                 });
             }
@@ -752,7 +761,7 @@
 
             const applySearch = debounce(() => {
                 searchTerm = (searchInput()?.value || "").trim();
-                render(new Date()); // เรนเดอร์ใหม่เพื่อไฮไลต์/จาง
+                render(new Date());
             }, 120);
 
             window.addEventListener("DOMContentLoaded", () => {
@@ -770,7 +779,6 @@
                         inp.focus();
                     });
                 }
-                // ช็อตคัตกด "/" เพื่อโฟกัสช่องค้นหา
                 window.addEventListener("keydown", (e) => {
                     if (
                         e.key === "/" &&
