--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                             —
                         </div>
                     </div>
-                    <div class="text-right">
+                    <div class="md:text-right">
                         <div
                             class="text-sm text-gray-500 dark:text-gray-400 mb-1"
                         >
